Refactor components with styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <router-outlet>
-  <app-project-list></app-project-list>
+  <app-realisations-carousel></app-realisations-carousel>
 </router-outlet>
 <app-footer></app-footer>
